--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "klasha",
+  "name": "angular-test-klasha",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
+    "build": "node scripts/copy-artifacts && ng build",
+    "test": "ng test angular-klasha",
+    "lint": "ng lint angular-klasha",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -20,8 +18,9 @@
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
     "@ionic/angular": "^5.5.2",
+    "ng-packagr": "^12.1.0",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -56,5 +55,20 @@
     "ts-node": "~8.3.0",
     "typescript": "~4.2.4"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "author": {
+    "email": "danstevea@gmail.com",
+    "name": "Dansteve Adekanbi",
+    "url": "https://github.com/dansteve",
+    "website": "https://meetdansteve.com/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dansteve/angular-klasha.git"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/dansteve/angular-klasha/issues"
+  },
+  "homepage": "https://github.com/dansteve/angular-klasha#readme"
 }
