--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
     "@ionic/angular": "^5.5.2",
+    "angular-klasha": "^0.0.1",
     "ng-packagr": "^12.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
